<resources>
    <string name="app_name">QuizProjektas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">IT Quiz</string>
    <string name="title_activity_quiz">IT Quiz</string>
    <string name="question">Question X. This is a question?</string>
    <string name="answer_one">Answer 1</string>
    <string name="answer_two">Answer 2</string>
    <string name="answer_three">Answer 3</string>
    <string name="answer_four">Answer 4</string>
    <string name="next_questions">Next question</string>
    <string name="previous_questions">Previous question</string>
    <string name="score_counter">Questions answered : 0</string>
    <string name="life_counter">Lives : 3</string>
</resources>
