<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jonasmiciulis.quizprojektas.QuizActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:id="@+id/quiz_question"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="150dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/quiz_question"
        android:layout_alignLeft="@+id/quiz_question"
        android:layout_alignStart="@+id/quiz_question"
        android:layout_marginTop="40dp"
        android:paddingLeft="10dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/radio0"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:text="@string/answer_one"
            android:layout_marginBottom="10dp"
            android:paddingLeft="24dp"/>

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/radio1"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:text="@string/answer_two"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"/>

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/radio2"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:text="@string/answer_three"
            android:layout_marginBottom="10dp"
            android:paddingLeft="20dp"/>

        <RadioButton
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/radio3"
            android:textSize="19sp"
            android:textColor="@color/black"
            android:text="@string/answer_four"
            android:paddingLeft="20dp"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/life_counter"
        android:textSize="19sp"
        android:paddingRight="10dp"
        android:id="@+id/life_label"
        android:textColor="@color/orange"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_height="60dp"
        android:layout_width="240dp"
        android:gravity="center"
        android:id="@+id/nextquiz"
        android:textColor="@color/white"
        android:text="@string/next_questions"
        android:background="@drawable/quizbutton"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_counter"
        android:id="@+id/score_label"
        android:textSize="19sp"
        android:textColor="@color/green"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_height="80dp"
        android:layout_width="80dp"
        android:gravity="center"
        android:id="@+id/time"
        android:textColor="@color/white"
        android:text="60"
        android:textSize="22sp"
        android:background="@drawable/roundedbutton"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/score_label"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
